--- a/wwwroot/css/DataJuggler.Blazor.Components.css
+++ b/wwwroot/css/DataJuggler.Blazor.Components.css
@@ -8,7 +8,7 @@
 }
 .backgroundcolorantiquewhite
 {
-    background-color: antiquewhite;
+    background-color: antiquewhite;    
 }
 .backgroundcoloraqua
 {
@@ -577,6 +577,24 @@
 .backgroundcolorrebeccapurple
 {
     background-color: rebeccapurple;
+}
+.border1
+{
+    border-width: 1px;
+    border-color: black;
+    border-style: solid;
+}
+.border2
+{
+    border-width: 1px;
+    border-color: black;
+    border-style: solid;
+}
+.border3
+{
+    border-width: 1px;
+    border-color: black;
+    border-style: solid;
 }
 .clear
 {
@@ -27015,6 +27033,10 @@
 {
     margin-top: 600px;
 }
+.positionabsolute
+{
+    position: inherit;
+}
 .nopadding
 {
     margin: 0;
@@ -43061,4 +43083,819 @@
     width: 1000px;
     min-width: 1000px;
     max-width: 1000px;
+}
+.zindex1
+{
+    position: relative;
+    top: 0px;
+    left: 0px;
+    z-index: 1;
+}
+.zindex0
+{
+    position: relative;
+    top: 0px;
+    left: 0px;
+    z-index: 0;
+    overflow: visible;
+}
+.zindex1
+{
+    position: relative;
+    top: 0px;
+    left: 0px;
+    z-index: 1;
+    overflow: visible;
+}
+.zindex2
+{
+    position: relative;
+    top: 0px;
+    left: 0px;
+    z-index: 2;
+    overflow: visible;
+}
+.zindex3
+{
+    position: relative;
+    top: 0px;
+    left: 0px;
+    z-index: 3;
+    overflow: visible;
+}
+.zindex4
+{
+    position: relative;
+    top: 0px;
+    left: 0px;
+    z-index: 4;
+    overflow: visible;
+}
+.zindex5
+{
+    position: relative;
+    top: 0px;
+    left: 0px;
+    z-index: 5;
+    overflow: visible;
+}
+.zindex6
+{
+    position: relative;
+    top: 0px;
+    left: 0px;
+    z-index: 6;
+    overflow: visible;
+}
+.zindex7
+{
+    position: relative;
+    top: 0px;
+    left: 0px;
+    z-index: 7;
+    overflow: visible;
+}
+.zindex8
+{
+    position: relative;
+    top: 0px;
+    left: 0px;
+    z-index: 8;
+    overflow: visible;
+}
+.zindex9
+{
+    position: relative;
+    top: 0px;
+    left: 0px;
+    z-index: 9;
+    overflow: visible;
+}
+.zindex10
+{
+    position: relative;
+    top: 0px;
+    left: 0px;
+    z-index: 10;
+    overflow: visible;
+}
+.zindex11
+{
+    position: relative;
+    top: 0px;
+    left: 0px;
+    z-index: 11;
+    overflow: visible;
+}
+.zindex12
+{
+    position: relative;
+    top: 0px;
+    left: 0px;
+    z-index: 12;
+    overflow: visible;
+}
+.zindex13
+{
+    position: relative;
+    top: 0px;
+    left: 0px;
+    z-index: 13;
+    overflow: visible;
+}
+.zindex14
+{
+    position: relative;
+    top: 0px;
+    left: 0px;
+    z-index: 14;
+    overflow: visible;
+}
+.zindex15
+{
+    position: relative;
+    top: 0px;
+    left: 0px;
+    z-index: 15;
+    overflow: visible;
+}
+.zindex16
+{
+    position: relative;
+    top: 0px;
+    left: 0px;
+    z-index: 16;
+    overflow: visible;
+}
+.zindex17
+{
+    position: relative;
+    top: 0px;
+    left: 0px;
+    z-index: 17;
+    overflow: visible;
+}
+.zindex18
+{
+    position: relative;
+    top: 0px;
+    left: 0px;
+    z-index: 18;
+    overflow: visible;
+}
+.zindex19
+{
+    position: relative;
+    top: 0px;
+    left: 0px;
+    z-index: 19;
+    overflow: visible;
+}
+.zindex20
+{
+    position: relative;
+    top: 0px;
+    left: 0px;
+    z-index: 20;
+    overflow: visible;
+}
+.zindex21
+{
+    position: relative;
+    top: 0px;
+    left: 0px;
+    z-index: 21;
+    overflow: visible;
+}
+.zindex22
+{
+    position: relative;
+    top: 0px;
+    left: 0px;
+    z-index: 22;
+    overflow: visible;
+}
+.zindex23
+{
+    position: relative;
+    top: 0px;
+    left: 0px;
+    z-index: 23;
+    overflow: visible;
+}
+.zindex24
+{
+    position: relative;
+    top: 0px;
+    left: 0px;
+    z-index: 24;
+    overflow: visible;
+}
+.zindex25
+{
+    position: relative;
+    top: 0px;
+    left: 0px;
+    z-index: 25;
+    overflow: visible;
+}
+.zindex26
+{
+    position: relative;
+    top: 0px;
+    left: 0px;
+    z-index: 26;
+    overflow: visible;
+}
+.zindex27
+{
+    position: relative;
+    top: 0px;
+    left: 0px;
+    z-index: 27;
+    overflow: visible;
+}
+.zindex28
+{
+    position: relative;
+    top: 0px;
+    left: 0px;
+    z-index: 28;
+    overflow: visible;
+}
+.zindex29
+{
+    position: relative;
+    top: 0px;
+    left: 0px;
+    z-index: 29;
+    overflow: visible;
+}
+.zindex30
+{
+    position: relative;
+    top: 0px;
+    left: 0px;
+    z-index: 30;
+    overflow: visible;
+}
+.zindex31
+{
+    position: relative;
+    top: 0px;
+    left: 0px;
+    z-index: 31;
+    overflow: visible;
+}
+.zindex32
+{
+    position: relative;
+    top: 0px;
+    left: 0px;
+    z-index: 32;
+    overflow: visible;
+}
+.zindex33
+{
+    position: relative;
+    top: 0px;
+    left: 0px;
+    z-index: 33;
+    overflow: visible;
+}
+.zindex34
+{
+    position: relative;
+    top: 0px;
+    left: 0px;
+    z-index: 34;
+    overflow: visible;
+}
+.zindex35
+{
+    position: relative;
+    top: 0px;
+    left: 0px;
+    z-index: 35;
+    overflow: visible;
+}
+.zindex36
+{
+    position: relative;
+    top: 0px;
+    left: 0px;
+    z-index: 36;
+    overflow: visible;
+}
+.zindex37
+{
+    position: relative;
+    top: 0px;
+    left: 0px;
+    z-index: 37;
+    overflow: visible;
+}
+.zindex38
+{
+    position: relative;
+    top: 0px;
+    left: 0px;
+    z-index: 38;
+    overflow: visible;
+}
+.zindex39
+{
+    position: relative;
+    top: 0px;
+    left: 0px;
+    z-index: 39;
+    overflow: visible;
+}
+.zindex40
+{
+    position: relative;
+    top: 0px;
+    left: 0px;
+    z-index: 40;
+    overflow: visible;
+}
+.zindex41
+{
+    position: relative;
+    top: 0px;
+    left: 0px;
+    z-index: 41;
+    overflow: visible;
+}
+.zindex42
+{
+    position: relative;
+    top: 0px;
+    left: 0px;
+    z-index: 42;
+    overflow: visible;
+}
+.zindex43
+{
+    position: relative;
+    top: 0px;
+    left: 0px;
+    z-index: 43;
+    overflow: visible;
+}
+.zindex44
+{
+    position: relative;
+    top: 0px;
+    left: 0px;
+    z-index: 44;
+    overflow: visible;
+}
+.zindex45
+{
+    position: relative;
+    top: 0px;
+    left: 0px;
+    z-index: 45;
+    overflow: visible;
+}
+.zindex46
+{
+    position: relative;
+    top: 0px;
+    left: 0px;
+    z-index: 46;
+    overflow: visible;
+}
+.zindex47
+{
+    position: relative;
+    top: 0px;
+    left: 0px;
+    z-index: 47;
+    overflow: visible;
+}
+.zindex48
+{
+    position: relative;
+    top: 0px;
+    left: 0px;
+    z-index: 48;
+    overflow: visible;
+}
+.zindex49
+{
+    position: relative;
+    top: 0px;
+    left: 0px;
+    z-index: 49;
+    overflow: visible;
+}
+.zindex50
+{
+    position: relative;
+    top: 0px;
+    left: 0px;
+    z-index: 50;
+    overflow: visible;
+}
+.zindex51
+{
+    position: relative;
+    top: 0px;
+    left: 0px;
+    z-index: 51;
+    overflow: visible;
+}
+.zindex52
+{
+    position: relative;
+    top: 0px;
+    left: 0px;
+    z-index: 52;
+    overflow: visible;
+}
+.zindex53
+{
+    position: relative;
+    top: 0px;
+    left: 0px;
+    z-index: 53;
+    overflow: visible;
+}
+.zindex54
+{
+    position: relative;
+    top: 0px;
+    left: 0px;
+    z-index: 54;
+    overflow: visible;
+}
+.zindex55
+{
+    position: relative;
+    top: 0px;
+    left: 0px;
+    z-index: 55;
+    overflow: visible;
+}
+.zindex56
+{
+    position: relative;
+    top: 0px;
+    left: 0px;
+    z-index: 56;
+    overflow: visible;
+}
+.zindex57
+{
+    position: relative;
+    top: 0px;
+    left: 0px;
+    z-index: 57;
+    overflow: visible;
+}
+.zindex58
+{
+    position: relative;
+    top: 0px;
+    left: 0px;
+    z-index: 58;
+    overflow: visible;
+}
+.zindex59
+{
+    position: relative;
+    top: 0px;
+    left: 0px;
+    z-index: 59;
+    overflow: visible;
+}
+.zindex60
+{
+    position: relative;
+    top: 0px;
+    left: 0px;
+    z-index: 60;
+    overflow: visible;
+}
+.zindex61
+{
+    position: relative;
+    top: 0px;
+    left: 0px;
+    z-index: 61;
+    overflow: visible;
+}
+.zindex62
+{
+    position: relative;
+    top: 0px;
+    left: 0px;
+    z-index: 62;
+    overflow: visible;
+}
+.zindex63
+{
+    position: relative;
+    top: 0px;
+    left: 0px;
+    z-index: 63;
+    overflow: visible;
+}
+.zindex64
+{
+    position: relative;
+    top: 0px;
+    left: 0px;
+    z-index: 64;
+    overflow: visible;
+}
+.zindex65
+{
+    position: relative;
+    top: 0px;
+    left: 0px;
+    z-index: 65;
+    overflow: visible;
+}
+.zindex66
+{
+    position: relative;
+    top: 0px;
+    left: 0px;
+    z-index: 66;
+    overflow: visible;
+}
+.zindex67
+{
+    position: relative;
+    top: 0px;
+    left: 0px;
+    z-index: 67;
+    overflow: visible;
+}
+.zindex68
+{
+    position: relative;
+    top: 0px;
+    left: 0px;
+    z-index: 68;
+    overflow: visible;
+}
+.zindex69
+{
+    position: relative;
+    top: 0px;
+    left: 0px;
+    z-index: 69;
+    overflow: visible;
+}
+.zindex70
+{
+    position: relative;
+    top: 0px;
+    left: 0px;
+    z-index: 70;
+    overflow: visible;
+}
+.zindex71
+{
+    position: relative;
+    top: 0px;
+    left: 0px;
+    z-index: 71;
+    overflow: visible;
+}
+.zindex72
+{
+    position: relative;
+    top: 0px;
+    left: 0px;
+    z-index: 72;
+    overflow: visible;
+}
+.zindex73
+{
+    position: relative;
+    top: 0px;
+    left: 0px;
+    z-index: 73;
+    overflow: visible;
+}
+.zindex74
+{
+    position: relative;
+    top: 0px;
+    left: 0px;
+    z-index: 74;
+    overflow: visible;
+}
+.zindex75
+{
+    position: relative;
+    top: 0px;
+    left: 0px;
+    z-index: 75;
+    overflow: visible;
+}
+.zindex76
+{
+    position: relative;
+    top: 0px;
+    left: 0px;
+    z-index: 76;
+    overflow: visible;
+}
+.zindex77
+{
+    position: relative;
+    top: 0px;
+    left: 0px;
+    z-index: 77;
+    overflow: visible;
+}
+.zindex78
+{
+    position: relative;
+    top: 0px;
+    left: 0px;
+    z-index: 78;
+    overflow: visible;
+}
+.zindex79
+{
+    position: relative;
+    top: 0px;
+    left: 0px;
+    z-index: 79;
+    overflow: visible;
+}
+.zindex80
+{
+    position: relative;
+    top: 0px;
+    left: 0px;
+    z-index: 80;
+    overflow: visible;
+}
+.zindex81
+{
+    position: relative;
+    top: 0px;
+    left: 0px;
+    z-index: 81;
+    overflow: visible;
+}
+.zindex82
+{
+    position: relative;
+    top: 0px;
+    left: 0px;
+    z-index: 82;
+    overflow: visible;
+}
+.zindex83
+{
+    position: relative;
+    top: 0px;
+    left: 0px;
+    z-index: 83;
+    overflow: visible;
+}
+.zindex84
+{
+    position: relative;
+    top: 0px;
+    left: 0px;
+    z-index: 84;
+    overflow: visible;
+}
+.zindex85
+{
+    position: relative;
+    top: 0px;
+    left: 0px;
+    z-index: 85;
+    overflow: visible;
+}
+.zindex86
+{
+    position: relative;
+    top: 0px;
+    left: 0px;
+    z-index: 86;
+    overflow: visible;
+}
+.zindex87
+{
+    position: relative;
+    top: 0px;
+    left: 0px;
+    z-index: 87;
+    overflow: visible;
+}
+.zindex88
+{
+    position: relative;
+    top: 0px;
+    left: 0px;
+    z-index: 88;
+    overflow: visible;
+}
+.zindex89
+{
+    position: relative;
+    top: 0px;
+    left: 0px;
+    z-index: 89;
+    overflow: visible;
+}
+.zindex90
+{
+    position: relative;
+    top: 0px;
+    left: 0px;
+    z-index: 90;
+    overflow: visible;
+}
+.zindex91
+{
+    position: relative;
+    top: 0px;
+    left: 0px;
+    z-index: 91;
+    overflow: visible;
+}
+.zindex92
+{
+    position: relative;
+    top: 0px;
+    left: 0px;
+    z-index: 92;
+    overflow: visible;
+}
+.zindex93
+{
+    position: relative;
+    top: 0px;
+    left: 0px;
+    z-index: 93;
+    overflow: visible;
+}
+.zindex94
+{
+    position: relative;
+    top: 0px;
+    left: 0px;
+    z-index: 94;
+    overflow: visible;
+}
+.zindex95
+{
+    position: relative;
+    top: 0px;
+    left: 0px;
+    z-index: 95;
+    overflow: visible;
+}
+.zindex96
+{
+    position: relative;
+    top: 0px;
+    left: 0px;
+    z-index: 96;
+    overflow: visible;
+}
+.zindex97
+{
+    position: relative;
+    top: 0px;
+    left: 0px;
+    z-index: 97;
+    overflow: visible;
+}
+.zindex98
+{
+    position: relative;
+    top: 0px;
+    left: 0px;
+    z-index: 98;
+    overflow: visible;
+}
+.zindex99
+{
+    position: relative;
+    top: 0px;
+    left: 0px;
+    z-index: 99;
+    overflow: visible;
+}
+.zindex100
+{
+    position: relative;
+    top: 0px;
+    left: 0px;
+    z-index: 100;
+    overflow: visible;
 }
