--- a/CalendarComponent.razor
+++ b/CalendarComponent.razor
@@ -151,7 +151,7 @@
             <td width="@TextBoxWidth">
             <ValidationComponent Name="DisplayTextBox" Caption="@Caption" Parent="this" ClassName="displayinline"
                 Column1Width="@Column1Width" Column2Width="@Column2Width" TextBoxWidth="@TextBoxWidth" 
-                Width="@Width" LabelClassName="@LabelClassName" ZIndex="@ZIndex">
+                Width="@Width" Height="@TextBoxHeight" LabelClassName="@LabelClassName" ZIndex="@ZIndex" Left="@TextBoxLeft">
             </ValidationComponent>
             </td>
             <td width="@ButtonWidth">
