Checking in version 8.8.10, which adds cursor pointer to the hover for the image button.

--- a/ComboBox.razor
+++ b/ComboBox.razor
@@ -62,6 +62,7 @@
     position: @ButtonPosition;
     left: @ButtonLeftStyle;
     top: @ButtonTopStyle;
+    cursor: pointer;
 </Styled>
 <Styled @bind-Classname=@CheckedListBoxStyle>   
     position: @CheckedListPosition;
