--- a/ImageButton.razor
+++ b/ImageButton.razor
@@ -34,6 +34,7 @@
 <style>
     .imagebutton
     {
+        cursor: default;
     }
     .imagebutton:focus
     {
@@ -44,6 +45,7 @@
     {
         outline: none;
         border: none;
+        cursor: pointer !important;
     }
 </style>
 
