I added cursor pointer to the Day buttons.

--- a/CalendarComponent.razor
+++ b/CalendarComponent.razor
@@ -105,6 +105,7 @@
     padding: 0px;
     position: relative;
     left: 1px;
+    cursor: pointer;
 </Styled>
 <Styled @bind-Classname=@DayButtonStyle2>   
     border: 0px;
@@ -123,6 +124,7 @@
     padding: 0px;
     position: relative;
     left: 1px;
+    cursor: pointer;
 </Styled>
 <Styled @bind-Classname=@DayButtonStyle3>
     border: 0px;
@@ -143,6 +145,7 @@
     position: relative;
     left: 1px;
     object-fit: cover;
+    cursor: pointer;
 </Styled>
 
 <div class="@ContainerStyle @ClassName">
