Checking in before I start adding a Year Button and Decade - Year Selector

--- a/CalendarComponent.razor
+++ b/CalendarComponent.razor
@@ -152,9 +152,11 @@
     <table>
         <tr class="textdonotwrap">
             <td width="@TextBoxWidth">
-            <ValidationComponent Name="DisplayTextBox" Caption="@Caption" Parent="this" ClassName="displayinline"
-                Column1Width="@Column1Width" Column2Width="@Column2Width" TextBoxWidth="@TextBoxWidth" 
-                Width="@Width" Height="@TextBoxHeight" LabelClassName="@LabelClassName" ZIndex="@ZIndex" Left="@TextBoxLeft">
+            <ValidationComponent Name="DisplayTextBox" Caption="@Caption" Parent="this" 
+                ClassName="displayinline" Column1Width="@Column1Width" 
+                Column2Width="@Column2Width" TextBoxWidth="@TextBoxWidth" 
+                Width="@Width" Height="@TextBoxHeight" LabelClassName="@LabelClassName" 
+                ZIndex="@ZIndex" Left="@TextBoxLeft">
             </ValidationComponent>
             </td>
             <td width="@ButtonWidth">
