--- a/ComboBox.razor
+++ b/ComboBox.razor
@@ -100,10 +100,11 @@
         <table>
             <tr class="textdonotwrap">
                 <td width="@TextBoxWidth">
-                    <ValidationComponent Name="DisplayTextBox" Caption="@LabelText" Parent="this" ClassName="displayinline"
-                            Column1Width="@Column1Width" Column2Width="@Column2Width" TextBoxWidth="@TextBoxWidth"
-                            SendAllTextToParent=true Text="@SelectedText"
-                            Width="@Width" LabelClassName="@LabelClassName" ZIndex="@ZIndex">
+                    <ValidationComponent Name="DisplayTextBox" Caption="@LabelText" Parent="this" 
+                        ClassName="displayinline" Column1Width="@Column1Width" 
+                        Column2Width="@Column2Width" TextBoxWidth="@TextBoxWidth" 
+                        SendAllTextToParent=true Text="@SelectedText" 
+                        Width="@Width" LabelClassName="@LabelClassName" ZIndex="@ZIndex">
                     </ValidationComponent>
                 </td>
                 <td width="@ButtonWidth">
