I fixed the InformationBox by Removing display inline block.

--- a/InformationBox.razor
+++ b/InformationBox.razor
@@ -36,12 +36,12 @@
     top: @ListItemTopStyle;
 </Styled>
 <Styled @bind-Classname=@ItemContainerStyle>
-    display: inline-block;
+    display: block;
     white-space: nowrap;
 </Styled>
 <Styled @bind-Classname=@ListItemStyle>
-    display: inline-block;
-    font-size: @FontSizeStyle;
+    display: block;
+    font-size: @FontSizeStyle;    
 </Styled>
 <Styled @bind-Classname=@ImageStyle>
     display: inline-block;
