I updated the InformationBox with some properties for Width and TextAlign for each column

--- a/InformationBox.razor
+++ b/InformationBox.razor
@@ -28,12 +28,16 @@
 <Styled @bind-Classname=@Column1Style>
     position: @Position;
     left: @Column1LeftStyle;
+    width: @Column1WidthStyle;
+    text-align: @Column1TextAlignStyle;
 </Styled>
 <Styled @bind-Classname=@Column2Style>
     display: inline-block;
     position: @ListItemPosition;
     left: @ListItemLeftStyle;
     top: @ListItemTopStyle;
+    text-align: @Column2TextAlignStyle;
+    width: @Column2WidthStyle;
 </Styled>
 <Styled @bind-Classname=@ItemContainerStyle>
     display: block;
